Added sorting algo modal video, and formatted the modal. Added a message sent flash message when successfully sent.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -128,6 +128,11 @@ html, body {
     background-repeat: no-repeat;
 }
 
+#SA_video_modal {
+    font-family: Raleway;
+    color: black;
+}
+
 /* ---------------------- */
 
 .footer {
