--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
         {% for message in get_flashed_messages() %}
         <div class="alert alert-light">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <i class="fas fa-exclamation-triangle"></i> {{ message }}
+            <i class="far fa-check-square"></i> {{ message }}
         </div>
         {% endfor %}
     </div>
