--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,16 +1,14 @@
-<div class="footer bg-light" style="display: flex;">
-    <div style="width: 50%;">
+<div class="footer bg-light flex-center">
 
-    </div>
-    <div class="flex-center" style="width: 50%;">
-        <div class="flex-col" style="margin-right: 10%;">
-            <h5>Email</h5>
+    <div id="footer-box" class="flex-center" style="width: 50%;">
+        <div class="flex-col;" style="margin-right: 10%;">
+            <h4>Email</h4>
             <p>
                 <a href="mailto:seanohioroberts@gmail.com" style="color: black;">seanohioroberts@gmail.com</a>
             </p>
         </div>
         <div class="flex-col">
-            <h5>Socials</h5>
+            <h4>Socials</h4>
             <p>
                 <a href="https://github.com/SeanFromOhio" target="_blank" style="margin-right: 10px;">
                     <i class="fab fa-github" style="color: black;"></i>
