--- a/templates/resume.html
+++ b/templates/resume.html
@@ -3,7 +3,19 @@
 {% block title %} Resume {% endblock title %}
 
 {% block content %}
-<div class="full-screen flex-col font-Raleway" style="padding: 2%; height: 165%;">
+<div id="mobile-resume" class="full-screen font-Raleway">
+    <h2><b>Resume // </b>
+        <a class="btn btn-light custom-button"
+           href="{{ url_for('static', filename='doc/Technical Interview V1.0.pdf') }}"
+           target="_blank">Download Resume
+        </a>
+    </h2>
+    <a class="btn" href="{{ url_for('static', filename='doc/Technical Interview V1.0.pdf') }}" target="_blank">>
+        <img src="{{ url_for('static', filename='images/resume_pic.jpg') }}" style="max-width: 100%; max-height: 100%;">
+    </a>
+</div>
+
+<div id="regular-resume" class="full-screen font-Raleway">
     <h2><b>Resume // </b>
         <a class="btn btn-light custom-button"
                      href="{{ url_for('static', filename='doc/Technical Interview V1.0.pdf') }}"
@@ -15,5 +27,6 @@
             style="width: 61%; height: 87%; border: 0;"
     >
     </iframe>
+
 </div>
 {% endblock content %}
