--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
         {% endfor %}
     </div>
     <div class="flex-col" style="width: 50%;">
-        <h1 style="font-size: 5.9vmin;"><b>Looking forward to hearing from you</b></h1>
+        <h1 style="font-size: 5.9vmin; text-align: center;"><b>Looking forward to hearing from you</b></h1>
         <br>
     </div>
     <div class="bg-dark text-center" style="width: 50%; max-height: 57%;">
