--- a/templates/index.html
+++ b/templates/index.html
@@ -287,7 +287,7 @@
             <!-- Video -->
             <div class="modal-body" style="background: black;">
                 <div class="flex-center">
-                    <video controls="controls" width="600" height="400" autoplay style="border: 0;" id="SA_video"
+                    <video controls="controls" autoplay style="border: 0; height: 40%; width: 60%;" id="SA_video"
                            src="{{ url_for('static', filename='images/sorting_algo_demo.mp4') }}">
                     </video>
                 </div>
