text adjustment for mobile view

--- a/templates/index.html
+++ b/templates/index.html
@@ -180,12 +180,12 @@
                     <!-- Text -->
                     <h2><b>Sorting Algo Visualizer</b></h2>
                     <h4 style="margin: 0;"><u>Description:</u></h4>
-                    <p>
+                    <h4>
                         A helpful educational tool to see the inner workings of the four most iconic sorting algorithms.
-                    </p>
+                    </h4>
 
                     <h4 style="margin: 0;"><u>Technologies:</u></h4>
-                    <p>Python, Tkinter, Ttk (styling)</p>
+                    <h4>Python, Tkinter, Ttk (styling)</h4>
 
                     <!-- Buttons -->
                     <div>
@@ -219,10 +219,10 @@
                     <!-- Text -->
                     <h2><b>Swerl Expense Tracker</b></h2>
                     <h4 style="margin: 0;"><u>Description:</u></h4>
-                    <p>Expense tracking made easy, with a variety of tools to take control of your finances.</p>
+                    <h4>Expense tracking made easy, with a variety of tools to take control of your finances.</h4>
 
                     <h4 style="margin: 0;"><u>Technologies:</u></h4>
-                    <p>Python, Django, Javascript (small scripts), HTML5, CSS3, Plotly, Pandas (lib)</p>
+                    <h4>Python, Django, Javascript (small scripts), HTML5, CSS3, Plotly, Pandas (lib)</h4>
 
                     <!-- Buttons -->
                     <div>
@@ -251,12 +251,12 @@
                 <!-- Back side of card -->
                 <div class="flip-card-back flex-col-just">
                     <!-- Text -->
-                    <h2><b>WeatherMusic</b></h2>
+                    <h4 style="font-size: 2.7vh;"><b>WeatherMusic</b></h4>
                     <h4 style="margin: 0;"><u>Description:</u></h4>
-                    <p>A fun way of combining local weather conditions with music.</p>
+                    <h4>A fun way of combining local weather conditions with music.</h4>
 
                     <h4 style="margin: 0;"><u>Technologies:</u></h4>
-                    <p>Python, Flask, Javascript (+ AJAX), HTML5, CSS3, Google APIs, NWS API</p>
+                    <h4>Python, Flask, Javascript (+ AJAX), HTML5, CSS3, Google APIs, NWS API</h4>
 
                     <!-- Buttons -->
                     <div>
