--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <div style="width: 10%; display: flex; align-items: center; flex-direction: column;">
         <div class="shape-triangle"></div>
-        <a href="#projects-page" type="button" class="btn" style="position: absolute; bottom: 1px;">
+        <a href="#projects-page" type="button" class="btn bg-transparent" style="position: absolute; bottom: 1px;">
             <i class="fas fa-hand-point-down fa-lg" style="color: white;"></i>
         </a>
     </div>
@@ -298,7 +298,8 @@
                     Close
                 </button>
                 <a type="button" class="btn btn-primary custom-button font-Raleway" target="_blank"
-                   href="https://github.com/SeanFromOhio/Tkinter-Sorting-Algo_Visualizer"> Code
+                   href="https://github.com/SeanFromOhio/Tkinter-Sorting-Algo_Visualizer">
+                    Code
                 </a>
             </div>
         </div>
