--- a/templates/resume.html
+++ b/templates/resume.html
@@ -10,8 +10,12 @@
            target="_blank">Download Resume
         </a>
     </h2>
-    <a class="btn" href="{{ url_for('static', filename='doc/Technical Interview V1.0.pdf') }}" target="_blank">>
+    <a class="btn" href="{{ url_for('static', filename='doc/Technical Interview V1.0.pdf') }}" target="_blank"
+        style="height: 90%; width:95%;">
+        <div id="resume-bg" style="height: 100%;"></div>
+<!--
         <img src="{{ url_for('static', filename='images/resume_pic.jpg') }}" style="max-width: 100%; max-height: 100%;">
+-->
     </a>
 </div>
 
@@ -24,7 +28,7 @@
     </h2>
     <iframe
             src="https://docs.google.com/document/d/e/2PACX-1vRAxb2so_Vgh_HdBMbE7O0aVvolVvluJ9s9oXE3Wf0peJFNm0O3se8uD6NDtv2iFtjQANSiwhBk43ZH/pub?embedded=true"
-            style="width: 61%; height: 87%; border: 0;"
+            style="min-width: 61%; height: 87%; border: 0;"
     >
     </iframe>
 
