--- a/templates/resume.html
+++ b/templates/resume.html
@@ -3,26 +3,26 @@
 {% block title %} Resume {% endblock title %}
 
 {% block content %}
-<div id="mobile-resume" class="full-screen font-Raleway">
+<div id="mobile-resume" class="full-screen font-Raleway" style="height: 200%;">
     <h2><b>Resume // </b>
         <a class="btn btn-light custom-button"
-           href="{{ url_for('static', filename='doc/Technical Interview V1.5.pdf') }}"
+           href="{{ url_for('static', filename='doc/Technical Resume V2.0.pdf') }}"
            target="_blank">Download Resume
         </a>
     </h2>
-    <a class="btn" href="{{ url_for('static', filename='doc/Technical Interview V1.5.pdf') }}" target="_blank"
-        style="height: 90%; width:95%;">
-        <div id="resume-bg" style="height: 100%;"></div>
-<!--
-        <img src="{{ url_for('static', filename='images/resume_pic.jpg') }}" style="max-width: 100%; max-height: 100%;">
--->
+    <a class="btn" href="{{ url_for('static', filename='doc/Technical Resume V2.0.pdf') }}" target="_blank"
+        style="height: 90%; width:95%; overflow: scroll;">
+<!--        <div id="resume-bg1" style="height: 100%;"></div>-->
+<!--        <div id="resume-bg2" style="height: 100%;"></div>-->
+        <img src="{{ url_for('static', filename='images/resume_pic1.jpg') }}" style="max-width: 70%; max-height: auto;">
+        <img src="{{ url_for('static', filename='images/resume_pic2.jpg') }}" style="max-width: 70%; max-height: auto;">
     </a>
 </div>
 
 <div id="regular-resume" class="full-screen font-Raleway">
     <h2><b>Resume // </b>
         <a class="btn btn-light custom-button"
-                     href="{{ url_for('static', filename='doc/Technical Interview V1.5.pdf') }}"
+                     href="{{ url_for('static', filename='doc/Technical Resume V2.0.pdf') }}"
                      target="_blank">Download Resume
         </a>
     </h2>
