--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Thumbnail data -->
+    <meta name="description" content="Personal Portfolio Website" />
+    <meta name="title" property="og:title" content="My Portfolio"/>
+    <meta property="og:type" content="Website"/>
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50909337203_c952279e9b_z.jpg"/>
+    <meta name="description" property="og:description" content="Personal Portfolio Website"/>
+    <meta name="author" content="Sean Roberts"/>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
